--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".config/nvim"]
-	path = .config/nvim
+[submodule "config/.config/nvim"]
+	path = config/.config/nvim
 	url = https://github.com/neputa/myLazyVimStarter.git
