--- a/config/.editorconfig
+++ b/config/.editorconfig
@@ -6,11 +6,12 @@ root = true
 
 # All files
 [*]
+charset = utf-8
+insert_final_newline = true
+trim_trailing_whitespace = true
+end_of_line = lf
 indent_style = space
 indent_size = 2
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = false
 guidelines = 80
 
 # Code files
