--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "config/.config/nvim"]
-	path = config/.config/nvim
+	path = common/config/nvim
 	url = https://github.com/neputa/myLazyVimStarter.git
