--- a/windows/config/lazygit/config.yml
+++ b/windows/config/lazygit/config.yml
@@ -214,9 +214,9 @@ gui:
   spinner:
     # The frames of the spinner animation.
     frames:
-      - '|'
+      - "|"
       - /
-      - '-'
+      - "-"
       - \
 
     # The "speed" of the spinner in milliseconds.
@@ -404,7 +404,7 @@ disableStartupPopups: false
 customCommands:
   - key: "<c-c>"
     context: "files"
-    description: 'commit files with format'
+    description: "commit files with format"
     prompts:
       - type: "menu"
         title: "What kind of commit type is it?"
@@ -445,67 +445,67 @@ customCommands:
         title: "Choise the emoji"
         key: "Emoji"
         options:
-          - name: '(empty)'
-            description: ''
-            value: ''
-          - name: ':ambulance:'
-            description: '(fix)🚑致命的なバグ修正'
-            value: ':ambulance:'
-          - name: ':bug:'
-            description: '(fix)🐛バグ修正'
-            value: ':bug:'
-          - name: ':+1:'
-            description: '(fix)👍機能改善や機能修正'
-            value: ':+1:'
-          - name: ':cop:'
-            description: '(fix)👮セキュリティ関連の修正'
-            value: ':cop:'
-          - name: ':tada'
-            description: '(feat)🎉大きな機能追加'
-            value: ':tada:'
-          - name: ':sparkles:'
-            description: '(feat)✨部分的な機能追加'
-            value: ':sparkles:'
-          - name: ':up:'
-            description: '(feat)🆙依存パッケージ等のアップデート'
-            value: ':up:'
-          - name: ':memo:'
-            description: '(docs)📝ドキュメントの追加や修正'
-            value: ':memo:'
-          - name: ':bulb'
-            description: '(docs)💡ソースコードへのコメント追加や修正'
-            value: ':bulb:'
-          - name: ':art:'
-            description: '(style)🎨レイアウト関連の修正'
-            value: ':art:'
-          - name: ':lipstick:'
-            description: '(style)💄Lintエラーの修正やコードスタイルの修正'
-            value: ':lipstick:'
-          - name: ':recycle:'
-            description: '(refactor)♻️ リファクタリング'
-            value: ':recycle:'
-          - name: ':fire:'
-            description: '(refactor)🔥コードやファイルの削除'
-            value: ':fire:'
-          - name: ':green_heart:'
-            description: '(test)💚テストやCIの修正'
-            value: ':green_heart:'
-          - name: ':rocket:'
-            description: '(perf)🚀パフォーマンス改善'
-            value: ':rocket:'
-          - name: ':wrench:'
-            description: '(chore)🔧設定ファイルの修正'
-            value: ':wrench:'
-          - name: ':building_construction:'
-            description: '(chore)🏗️アーキテクチャの修正'
-            value: ':building_construction:'
-          - name: ':construction:'
-            description: '(wip)🚧作業中'
-            value: ':construction:'
+          - name: "(empty)"
+            description: ""
+            value: ""
+          - name: ":ambulance:"
+            description: "(fix)🚑致命的なバグ修正"
+            value: ":ambulance:"
+          - name: ":bug:"
+            description: "(fix)🐛バグ修正"
+            value: ":bug:"
+          - name: ":+1:"
+            description: "(fix)👍機能改善や機能修正"
+            value: ":+1:"
+          - name: ":cop:"
+            description: "(fix)👮セキュリティ関連の修正"
+            value: ":cop:"
+          - name: ":tada"
+            description: "(feat)🎉大きな機能追加"
+            value: ":tada:"
+          - name: ":sparkles:"
+            description: "(feat)✨部分的な機能追加"
+            value: ":sparkles:"
+          - name: ":up:"
+            description: "(feat)🆙依存パッケージ等のアップデート"
+            value: ":up:"
+          - name: ":memo:"
+            description: "(docs)📝ドキュメントの追加や修正"
+            value: ":memo:"
+          - name: ":bulb"
+            description: "(docs)💡ソースコードへのコメント追加や修正"
+            value: ":bulb:"
+          - name: ":art:"
+            description: "(style)🎨レイアウト関連の修正"
+            value: ":art:"
+          - name: ":lipstick:"
+            description: "(style)💄Lintエラーの修正やコードスタイルの修正"
+            value: ":lipstick:"
+          - name: ":recycle:"
+            description: "(refactor)♻️ リファクタリング"
+            value: ":recycle:"
+          - name: ":fire:"
+            description: "(refactor)🔥コードやファイルの削除"
+            value: ":fire:"
+          - name: ":green_heart:"
+            description: "(test)💚テストやCIの修正"
+            value: ":green_heart:"
+          - name: ":rocket:"
+            description: "(perf)🚀パフォーマンス改善"
+            value: ":rocket:"
+          - name: ":wrench:"
+            description: "(chore)🔧設定ファイルの修正"
+            value: ":wrench:"
+          - name: ":building_construction:"
+            description: "(chore)🏗️アーキテクチャの修正"
+            value: ":building_construction:"
+          - name: ":construction:"
+            description: "(wip)🚧作業中"
+            value: ":construction:"
       - type: "confirm"
         title: "Commit"
         body: "Commit with the message '{{.Form.Type}}: {{.Form.Message}}{{.Form.Emoji}}'. Is this okay?"
-    command: "pwsh -c 'type=\"{{.Form.Type}}\"; message=\"{{.Form.Message}}\"; emoji=\"{{.Form.Emoji}}\"; commit_message=\"$type: $message $emoji\"; git commit -m \"$commit_message\"'"
+    command: "git commit -m '{{.Form.Type}}: {{.Form.Message}} {{.Form.Emoji}}'"
     loadingText: "Commiting..."
 
 # See https://github.com/jesseduffield/lazygit/blob/master/docs/Config.md#custom-pull-request-urls
@@ -533,12 +533,12 @@ keybinding:
     nextItem: <down>
     prevItem-alt: k
     nextItem-alt: j
-    prevPage: ','
+    prevPage: ","
     nextPage: .
     scrollLeft: H
     scrollRight: L
     gotoTop: <
-    gotoBottom: '>'
+    gotoBottom: ">"
     gotoTop-alt: <home>
     gotoBottom-alt: <end>
     toggleRangeSelect: v
@@ -560,7 +560,7 @@ keybinding:
     prevMatch: "N"
     startSearch: /
     optionMenu: <disabled>
-    optionMenu-alt1: '?'
+    optionMenu-alt1: "?"
     select: <space>
     goInto: <enter>
     confirm: <enter>
@@ -575,7 +575,7 @@ keybinding:
     scrollDownMain-alt1: J
     scrollUpMain-alt2: <c-u>
     scrollDownMain-alt2: <c-d>
-    executeShellCommand: ':'
+    executeShellCommand: ":"
     createRebaseOptionsMenu: m
 
     # 'Files' appended for legacy reasons
@@ -585,8 +585,8 @@ keybinding:
     pullFiles: p
     refresh: R
     createPatchOptionsMenu: <c-p>
-    nextTab: ']'
-    prevTab: '['
+    nextTab: "]"
+    prevTab: "["
     nextScreenMode: +
     prevScreenMode: _
     undo: z
@@ -597,10 +597,10 @@ keybinding:
     copyToClipboard: <c-o>
     openRecentRepos: <c-r>
     submitEditorText: <enter>
-    extrasMenu: '@'
+    extrasMenu: "@"
     toggleWhitespaceInDiffView: <c-w>
-    increaseContextInDiffView: '}'
-    decreaseContextInDiffView: '{'
+    increaseContextInDiffView: "}"
+    decreaseContextInDiffView: "{"
     increaseRenameSimilarityThreshold: )
     decreaseRenameSimilarityThreshold: (
     openDiffTool: <c-t>
@@ -622,11 +622,11 @@ keybinding:
     toggleStagedAll: a
     viewResetOptions: D
     fetch: f
-    toggleTreeView: '`'
+    toggleTreeView: "`"
     openMergeTool: M
     openStatusFilter: <c-b>
     copyFileInfoToClipboard: "y"
-    collapseAll: '-'
+    collapseAll: "-"
     expandAll: =
   branches:
     createPullRequest: o
