feat: :sparkles: add git commit template to unify with lazygit custom commands

--- a/windows/config/lazygit/config.yml
+++ b/windows/config/lazygit/config.yml
@@ -411,32 +411,44 @@ customCommands:
         key: "Type"
         options:
           - name: "fix"
-            description: "バグや不具合の修正"
+            description: "バグ修正"
             value: "fix"
           - name: "feat"
             description: "新機能の追加"
             value: "feat"
+          - name: "update"
+            description: "バグではない機能修正"
+            value: "update"
           - name: "docs"
             description: "ドキュメントの更新や改善"
             value: "docs"
+          - name: "disable"
+            description: "無効化"
+            value: "disable"
+          - name: "upgrade"
+            description: "バージョンアップ"
+            value: "upgrade"
+          - name: "revert"
+            description: "修正取り消し"
+            value: "revert"
           - name: "style"
             description: "コードフォーマットの修正、UIのみの変更"
             value: "style"
           - name: "refactor"
-            description: "パフォーマンスの改善なしのコードの改善"
+            description: "コードの改善"
             value: "refactor"
           - name: "test"
             description: "テストの追加や改善"
             value: "test"
-          - name: "perf"
-            description: "パフォーマンスの改善"
-            value: "perf"
           - name: "chore"
             description: "ビルドプロセスの変更や改善"
             value: "chore"
-          - name: "wip"
+          - name: "perf"
+            description: "パフォーマンスの改善"
+            value: "perf"
+          - name: "WIP"
             description: "作業中"
-            value: "wip"
+            value: "WIP"
       - type: "input"
         title: "Enter the Message"
         key: "Message"
@@ -445,62 +457,59 @@ customCommands:
         title: "Choise the emoji"
         key: "Emoji"
         options:
-          - name: "(empty)"
-            description: ""
-            value: ""
-          - name: ":ambulance:"
-            description: "(fix)🚑致命的なバグ修正"
-            value: ":ambulance:"
           - name: ":bug:"
             description: "(fix)🐛バグ修正"
             value: ":bug:"
           - name: ":+1:"
             description: "(fix)👍機能改善や機能修正"
             value: ":+1:"
-          - name: ":cop:"
-            description: "(fix)👮セキュリティ関連の修正"
-            value: ":cop:"
-          - name: ":tada"
+          - name: ":sparkles:"
+            description: "(feat)✨部分的な機能追加部分的な機能追加"
+            value: ":sparkles:"
+          - name: ":tada:"
             description: "(feat)🎉大きな機能追加"
             value: ":tada:"
-          - name: ":sparkles:"
-            description: "(feat)✨部分的な機能追加"
-            value: ":sparkles:"
-          - name: ":up:"
-            description: "(feat)🆙依存パッケージ等のアップデート"
-            value: ":up:"
+          - name: ":package:"
+            description: "(update)📦️依存パッケージなどのアップデート"
+            value: ":package:"
+          - name: ":cop:"
+            description: "(update)👮セキュリティ関連の改善"
+            value: ":cop:"
+          - name: ":gear:"
+            description: "(update)⚙  config変更"
+            value: ":gear:"
+          - name: ":books:"
+            description: "(docs)📚ドキュメント"
+            value: ":books:"
           - name: ":memo:"
-            description: "(docs)📝ドキュメントの追加や修正"
+            description: "(docs)📝文言修正"
             value: ":memo:"
-          - name: ":bulb"
-            description: "(docs)💡ソースコードへのコメント追加や修正"
-            value: ":bulb:"
-          - name: ":art:"
-            description: "(style)🎨レイアウト関連の修正"
-            value: ":art:"
-          - name: ":lipstick:"
-            description: "(style)💄Lintエラーの修正やコードスタイルの修正"
-            value: ":lipstick:"
-          - name: ":recycle:"
-            description: "(refactor)♻️ リファクタリング"
-            value: ":recycle:"
           - name: ":fire:"
-            description: "(refactor)🔥コードやファイルの削除"
+            description: "(disable)🔥不要な機能・使われなくなった機能の削除"
             value: ":fire:"
+          - name: ":arrow_up:"
+            description: "(upgrade)⬆️バージョンアップ"
+            value: ":arrow_up:"
+          - name: ":art:"
+            description: "(style)🎨UIのみの変更"
+            value: ":art:"
+          - name: ":shirt:"
+            description: "(style)👕Lintエラーの修正やコードスタイルの修正"
+            value: ":shirt:"
+          - name: ":recycle:"
+            description: "(refactor)♻️リファクタリング"
+            value: ":recycle:"
+          - name: ":white_check_mark:"
+            description: "(test)✅テストの追加や改善"
+            value: ":white_check_mark:"
           - name: ":green_heart:"
-            description: "(test)💚テストやCIの修正"
+            description: "(chore)💚ビルドプロセスの変更や改善"
             value: ":green_heart:"
           - name: ":rocket:"
-            description: "(perf)🚀パフォーマンス改善"
+            description: "(ferf)🚀パフォーマンス改善"
             value: ":rocket:"
-          - name: ":wrench:"
-            description: "(chore)🔧設定ファイルの修正"
-            value: ":wrench:"
-          - name: ":building_construction:"
-            description: "(chore)🏗️アーキテクチャの修正"
-            value: ":building_construction:"
           - name: ":construction:"
-            description: "(wip)🚧作業中"
+            description: "(WIP)🚧作業中"
             value: ":construction:"
       - type: "confirm"
         title: "Commit"
