update: update xaml indent spaces 2 to 4 in editorconfig :gear:

--- a/common/config/.editorconfig
+++ b/common/config/.editorconfig
@@ -35,10 +35,13 @@ insert_final_newline = true
 
 # Shell script files
 [*.sh]
-end_of_line = lf
 
 # astro files
 [*.astro]
+
+# xaml files
+[*.xaml]
+indent_size = 4
 
 ###############################
 # .NET Coding Conventions     #
