--- a/windows/terminal/settings.json
+++ b/windows/terminal/settings.json
@@ -1,10 +1,10 @@
 {
     "$help": "https://aka.ms/terminal-documentation",
     "$schema": "https://aka.ms/terminal-profiles-schema",
-    "actions": 
+    "actions":
     [
         {
-            "command": 
+            "command":
             {
                 "action": "splitPane",
                 "split": "auto",
@@ -17,7 +17,7 @@
             "id": "User.find"
         },
         {
-            "command": 
+            "command":
             {
                 "action": "copy",
                 "singleLine": false
@@ -25,7 +25,7 @@
             "id": "User.copy.644BA8F2"
         },
         {
-            "command": 
+            "command":
             {
                 "action": "splitPane"
             },
@@ -34,37 +34,44 @@
     ],
     "copyFormatting": "none",
     "copyOnSelect": false,
-    "defaultProfile": "{c8d600dd-4ef7-5bd8-921c-115a20e0d3ee}",
+    "defaultProfile": "{219ab038-0ea7-4534-8583-d2b0c664b2af}",
+    "disabledProfileSources":
+    [
+        "Windows.Terminal.Wsl",
+        "Windows.Terminal.Azure",
+        "Windows.Terminal.PowershellCore",
+        "Windows.Terminal.SSH"
+    ],
     "initialRows": 50,
-    "keybindings": 
+    "keybindings":
     [
         {
             "id": "User.find",
             "keys": "ctrl+shift+f"
         },
         {
-            "id": "User.splitPane.A6751878",
-            "keys": "alt+shift+d"
-        },
-        {
             "id": "Terminal.MoveFocusDown",
             "keys": "ctrl+shift+j"
         },
         {
-            "id": null,
-            "keys": "ctrl+shift+6"
+            "id": "User.splitPane.A6751878",
+            "keys": "alt+shift+d"
         },
         {
             "id": "Terminal.MoveFocusRight",
             "keys": "ctrl+shift+l"
         },
         {
-            "id": "Terminal.MoveFocusUp",
-            "keys": "ctrl+shift+k"
+            "id": null,
+            "keys": "ctrl+shift+6"
         },
         {
             "id": "User.copy.644BA8F2",
             "keys": "ctrl+c"
+        },
+        {
+            "id": "Terminal.MoveFocusUp",
+            "keys": "ctrl+shift+k"
         },
         {
             "id": "User.splitPane.91AB55B1",
@@ -92,68 +99,79 @@
         }
     ],
     "launchMode": "default",
-    "newTabMenu": 
+    "newTabMenu":
     [
         {
             "type": "remainingProfiles"
         }
     ],
-    "profiles": 
+    "profiles":
     {
-        "defaults": 
+        "defaults":
         {
-            "colorScheme": "Tango Dark",
-            "font": 
+            "colorScheme": "Molokai",
+            "font":
             {
                 "face": "HackGen Console NF",
                 "size": 14
             }
         },
-        "list": 
+        "list":
         [
             {
-                "guid": "{c8d600dd-4ef7-5bd8-921c-115a20e0d3ee}",
-                "hidden": false,
-                "name": "Ubuntu",
-                "source": "Microsoft.WSL"
-            },
-            {
-                "backgroundImage": null,
-                "backgroundImageOpacity": 0.15,
-                "backgroundImageStretchMode": "fill",
-                "colorScheme": "Campbell Powershell",
-                "commandline": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
+                "commandline": "%ProgramFiles%\\PowerShell\\7\\pwsh.exe",
                 "guid": "{219ab038-0ea7-4534-8583-d2b0c664b2af}",
                 "hidden": false,
-                "icon": "C:\\Users\\takuma\\OneDrive\\Pictures\\powershell.png",
-                "name": "Powershell 7",
-                "opacity": 100,
+                "icon": "ms-appx:///ProfileIcons/pwsh.png",
+                "name": "PowerShell 7.x",
                 "padding": "10",
                 "startingDirectory": "%USERPROFILE%"
             },
             {
-                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+                "commandline": "%SystemRoot%\\system32\\wsl.exe -d Ubuntu",
+                "guid": "{c8d600dd-4ef7-5bd8-921c-115a20e0d3ee}",
                 "hidden": false,
-                "name": "Command Prompt"
+                "icon": "ms-appx:///ProfileIcons/{9acb9455-ca41-5af7-950f-6bca1bc9722f}.png",
+                "name": "WSL Ubuntu",
+                "padding": "10",
+                "startingDirectory": "~"
             },
             {
-                "backgroundImage": null,
-                "backgroundImageOpacity": 0.4,
-                "commandline": "C:\\Program Files\\Microsoft SDKs\\Azure\\CLI2\\wbin\\az.cmd",
+                "commandline": "%ProgramFiles%\\PowerShell\\7\\cmd.exe",
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
                 "hidden": false,
-                "name": "Azure Cloud Shell",
-                "padding": "50",
-                "source": "Windows.Terminal.Azure"
-            },
-            {
-                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-                "hidden": false,
-                "name": "Windows PowerShell"
+                "icon": "ms-appx:///ProfileIcons/{0caa0dad-35be-5f56-a8ff-afceeeaa6101}.png",
+                "name": "Command Prompt",
+                "padding": "10",
+                "startingDirectory": "%USERPROFILE%"
             }
         ]
     },
-    "schemes": [],
-    "startOnUserLogin": false,
-    "themes": []
+    "schemes":
+    [
+        {
+            "name": "Molokai",
+            "black": "#121212",
+            "red": "#fa2573",
+            "green": "#98e123",
+            "yellow": "#dfd460",
+            "blue": "#1080d0",
+            "purple": "#8700ff",
+            "cyan": "#43a8d0",
+            "white": "#bbbbbb",
+            "brightBlack": "#555555",
+            "brightRed": "#f6669d",
+            "brightGreen": "#b1e05f",
+            "brightYellow": "#fff26d",
+            "brightBlue": "#00afff",
+            "brightPurple": "#af87ff",
+            "brightCyan": "#51ceff",
+            "brightWhite": "#ffffff",
+            "background": "#121212",
+            "foreground": "#bbbbbb",
+            "selectionBackground": "#b5d5ff",
+            "cursorColor": "#bbbbbb"
+        }
+    ],
+    "themes": [ ]
 }
