--- a/windows/terminal/settings.json
+++ b/windows/terminal/settings.json
@@ -137,7 +137,7 @@
                 "startingDirectory": "~"
             },
             {
-                "commandline": "%ProgramFiles%\\PowerShell\\7\\cmd.exe",
+                "commandline": "%SystemRoot%\\system32\\cmd.exe",
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
                 "hidden": false,
                 "icon": "ms-appx:///ProfileIcons/{0caa0dad-35be-5f56-a8ff-afceeeaa6101}.png",
